<resources>
    <string name="app_name">CameraMovements</string>
    <string name="main_activity_title">Camera Movement</string>
    <string name="main_activity_start_button">Use camera</string>
    <string name="main_activity_gallery_button">View images</string>
    <string name="settings">Settings</string>
    <string name="back_button">Back</string>
    <string name="settings_image_size">Image_size</string>
    <string name="settings_duration">Duration</string>
    <string name="settings_frames">Frames</string>
    <string name="settings_activity_save_and_exit">Save and exit</string>
    <string name="settings_activity_cancel">Cancel</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="activity_settings_timespan_title">Timespan in seconds</string>
    <string name="title_activity_recording">RecordingActivity</string>
    <string name="recorcing_activity_file_name_title">Filename:</string>
    <string name="recording_activity_title">Record</string>
    <string name="recording_activity_start">Start</string>
    <string name="recording_activity_stop">Stop service</string>
    <string name="recording_activity_edit_text_content_description">File name here</string>
    <string name="recording_activity_file_name_ending">.jpg</string>
    <string name="recording_activity_file_exists">File already exists</string>
    <string name="recording_activity_toast_message">Image handling done</string>
    <string name="image_gallery_thumbnail_description">Thumbnail of end product image</string>
    <string name="gallery_activity_thumbnail_description">Thumbnail, get larger version of image</string>
    <string name="image_fragment_image_description">End product of image manipulation</string>
    <string name="image_fragment_close_description">Close</string>
    <string name="notification_channel_title">Camera Movements</string>
    <string name="notification_channel_name">CameraMovementsChannel</string>
    <string name="notification_channel_description">For use of camera</string>
    <string name="for_amount_of_photos_seekbar">Amount of photos,10,20,120,photos</string>
    <string name="for_pixel_size_seekbar">Pixel size,1,3,50,pixel</string>
    <string name="for_r_values_seekbar">red multiplier %,10,100,200,red</string>
    <string name="for_g_values_seekbar">green multiplier %,10,100,200,green</string>
    <string name="for_b_values_seekbar">blue multiplier %,10,100,200,blue</string>
    <string name="title_activity_image_gallery">ImageGalleryActivity</string>
    <string name="gallery_activity_title">Images</string>
</resources>