<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_border"
    android:layout_margin="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/recording_activity_title_text_view"
        android:text="@string/recording_activity_title"
        style="@style/main_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/recording_activity_file_name_title_textview"
        android:text="@string/recorcing_activity_file_name_title"
        android:layout_margin="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recording_activity_title_text_view"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/recording_activity_file_name_edittext"
        android:hint="@string/recording_activity_edit_text_content_description"
        android:inputType="text"
        android:layout_margin="24dp"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/recording_activity_title_text_view"
        app:layout_constraintStart_toEndOf="@id/recording_activity_file_name_title_textview"
        app:layout_constraintEnd_toStartOf="@id/recording_activity_file_ending_textview"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/recording_activity_file_ending_textview"
        android:text="@string/recording_activity_file_name_ending"
        android:layout_margin="24dp"
        app:layout_constraintTop_toBottomOf="@id/recording_activity_title_text_view"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/recording_activity_start_button"
        android:text="@string/recording_activity_start"
        style="@style/colored_buttons"
        app:layout_constraintTop_toBottomOf="@id/recording_activity_title_text_view"
        app:layout_constraintBottom_toTopOf="@id/recording_activity_settings_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/recording_activity_stop_service_button"
        android:text="@string/recording_activity_stop"
        app:layout_constraintTop_toBottomOf="@id/recording_activity_start_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/recording_activity_back_button"
        android:text="@string/back_button"
        style="@style/colored_buttons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/recording_activity_warnings_textview"
        tools:text="warnings"
        android:textColor="@color/warning"
        android:textStyle="bold"
        android:layout_margin="24dp"
        app:layout_constraintTop_toBottomOf="@id/recording_activity_file_name_edittext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/recording_activity_settings_button"
        android:text="@string/settings"
        style="@style/colored_buttons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>